removed tasks from celery file to tasks.py

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 #starting celery beat and worker process
-celery -A jobWebsite beat -l info --logfile=celery.beat.log --detach  
+celery -A jobWebsite beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler 
 celery -A jobWebsite worker -l info --logfile=celery.log --detach
 
 #starting redis
