--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,2 @@
 #TODO  uncomment job whole list side bar and finish it functionality. Lazy boy  #FIXED ALREADY
+#TODO  create functions to scrape glassdoor
